# ChangeLog for x11-libs/gtk+
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.356 2007/12/13 17:56:07 compnerd Exp $

  14 Dec 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  -files/gtk+-2.2.1-disable_icons_smooth_alpha.patch,
  -files/gtk+-2.4.9-ppc64.patch,
  -files/gtk+-2.12.0-icon-cache-speedup.patch,
  -files/gtk+-2.12.0-libtracker_so.patch,
  -files/gtk+-2.12.0-searchenginesimple-crash-fix.patch,
  -files/gtk+-2.12.0-swt-tooltips-fix.patch, -files/gtk+-2-xpm_loader.patch,
  -gtk+-2.6.10-r1.ebuild, -gtk+-2.8.19.ebuild, -gtk+-2.8.20-r1.ebuild,
  -gtk+-2.10.13.ebuild, -gtk+-2.12.1-r1.ebuild:
  prune unused versions

  23 Nov 2007; Jeroen Roovers <jer@gentoo.org> gtk+-2.12.1-r2.ebuild:
  Stable for HPPA (bug #198845).

  23 Nov 2007; Jeroen Roovers <jer@gentoo.org> gtk+-2.12.1-r1.ebuild:
  Stable for HPPA (bug #198845).

*gtk+-2.12.1-r2 (21 Nov 2007)

  21 Nov 2007; Samuli Suominen <drac@gentoo.org> +gtk+-2.12.1-r2.ebuild:
  gdk-pixbuf.loaders installation was broken by einstall passing sysconfdir,
  revert back to using make with destdir wrt #199746.

  20 Nov 2007; Joshua Kinard <kumba@gentoo.org> gtk+-2.12.1-r1.ebuild:
  Stable on mips, per #198845.

  20 Nov 2007; Joshua Kinard <kumba@gentoo.org> gtk+-2.10.14.ebuild:
  Stable on mips, per #190019.

  19 Nov 2007; Markus Rothe <corsair@gentoo.org> gtk+-2.12.1-r1.ebuild:
  Stable on ppc64; bug #198845

  17 Nov 2007; nixnut <nixnut@gentoo.org> gtk+-2.12.1-r1.ebuild:
  Stable on ppc wrt bug 198845

  14 Nov 2007; Raúl Porcel <armin76@gentoo.org> gtk+-2.12.1-r1.ebuild:
  sparc stable wrt #198845

  14 Nov 2007; Raúl Porcel <armin76@gentoo.org> gtk+-2.12.1-r1.ebuild:
  alpha/ia64 stable wrt #198845

  13 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  gtk+-2.12.1-r1.ebuild:
  stable x86, bug 198845

  13 Nov 2007; Mart Raudsepp <leio@gentoo.org> gtk+-2.6.10-r1.ebuild,