@@ -9,7 +9,9 @@ AUX gtk+-2.8.0-multilib.patch 2456 RMD160 ba94fb0b16f9002dec8e92700ff3f7931f6005
 AUX gtk+-2.8.10-xinerama.patch 1083 RMD160 499801f3be2289bdc656563bb5c96797d14512f7 SHA1 7817e3c2bbec1058192d524d68e78635fa48beca SHA256 7786691d5f89588abc7174e97cbd374d8cbe98b4e8dfd27005eade03b047aa2d
 DIST gtk+-2.10.14.tar.bz2 15172170 RMD160 234d7240732b28a31a260aa9e04c34fc502acbf4 SHA1 78b819814d52caa66739ab64611e41f35e5b48c3 SHA256 d02344239d048390ba02fcfd7de4f9efc0dfb51e7b06dfa46a6314d666ea4de2
 DIST gtk+-2.12.1.tar.bz2 15856678 RMD160 3c3facd971a20178060c7e7cfe9d4cefd651250b SHA1 80114570273608251ef5acf9ee3daa4a3eb3d56b SHA256 7dceb0a5e6edc2398cd94415b336d7b37eb8941c2c41403c2c60bfb6ae47d6d6
-EBUILD gtk+-2.10.14.ebuild 5240 RMD160 191e75ee6c1da291cee458ed12b432c8cbfa5517 SHA1 798bcb74c40047a29824330358fabbdbdd02140f SHA256 8dfa46506e57a32fa099941d93b666e78e7ca7bbf67e8d7a6005cfcdc3f1a421
-EBUILD gtk+-2.12.1-r2.ebuild 5946 RMD160 096d9073510b4c2868030d1455c2134caa025082 SHA1 e054c4dfa7ee491a10d5cb12cf146a7c67832bf7 SHA256 e2b495619add5aec5597b43f5e54ddca9b3816226ba1e570269e04d3c9200bae
-MISC ChangeLog 50869 RMD160 73e31bc1be68c6c75b53660bf47514822c4ee1c2 SHA1 a27e1ff650c602269153f3d253f8cd44a999069d SHA256 76fa25ecb7a165ac9d1ff701588256cc27f8cf5c9f81f1c850e0193c9dd27091
+DIST gtk+-2.12.5.tar.bz2 15963537 RMD160 3eefe0fee421cc592a24de4e6b275319ce76fdbf SHA1 0ba6fb8b4e5a6a7972581e0ea6e9e8e8f81b991a SHA256 9e364df3d7368c1e69dab1b2352a68bc8ac07e35bf647bf23f3445d902bb4a4c
+EBUILD gtk+-2.10.14.ebuild 5258 RMD160 3cf1945d0ec0bab42ee35f2e36055f58cdb49dc6 SHA1 ead5b059a417e5c43f7db06c7e3f9f662c572135 SHA256 6171df2fc4714b967d9ffd8c6762ffdc5b852d57ed39a78bc19196bdb12c8673
+EBUILD gtk+-2.12.1-r2.ebuild 5964 RMD160 e916b5e0e4b64e15714355f72f6fcc4d1644df71 SHA1 6b238cebd92ceecde3fada70f6e9f685d9cbf3e9 SHA256 34fff0cfffdfe9932f10a6cd6d8530bb131a1b690e66512c5c76c18e42f27b8b
+EBUILD gtk+-2.12.5.ebuild 5646 RMD160 313510f8fa37aeb545216adc71c7bab8f49cedf3 SHA1 fcac18f259bb1c8056d10b89d427f70c970d81e2 SHA256 f228438cb11d6551de19957ce8710f72d146db2e3dfb09cb36bc75bbbd6e964d
+MISC ChangeLog 51040 RMD160 5b833698190974e2d9cf83544593d866021b40a6 SHA1 9d6c2629a017d43fae59f5f8c6b67f256be53ede SHA256 f19caa2f0969a4a9e16e9e6b589d9dbc5c7cccb067f2f0a7fac40231c9a70f57
 MISC metadata.xml 424 RMD160 b1748199254d5d0f0db468fdec36f07bb75a3231 SHA1 2e7dc93c7931af2139609dfb75dd38101a45d62a SHA256 8b65272928e676824c407ed438004d9e5d50077a09beee0b60984eadb695bc2d
